# todo-list-python

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
app/: app.py
